--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dawidgardzinski",
   "private": true,
-  "homepage": "https://dawidgardzinski.github.io/",
+  "homepage": "https://dawidgardzinski.dev/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
