--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
   },
   "devDependencies": {
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
-  },
-  "dependencies": {
+    "vite": "^4.1.0",
     "gh-pages": "^5.0.0"
-  }
+  },
+  "dependencies": {}
 }
