--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "deploy": "pnpm build && gh-pages -d dist -b build"
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0",
-    "gh-pages": "^5.0.0"
+    "vite": "^4.1.0"
   },
   "dependencies": {}
 }
