--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@types/lodash": "^4.14.191",
+    "lodash": "^4.17.21"
+  }
 }
