--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "devDependencies": {
     "gh-pages": "^5.0.0",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "rollup-plugin-analyzer": "^4.0.0"
   },
   "dependencies": {
     "@types/lodash": "^4.14.191",
